@@ -13,14 +13,33 @@ extern Font *mainFont;
 
 
 FinalMessagePage::FinalMessagePage()
-        : mKey( "" ) {
+        : mKey( "" ), mSubMessage( NULL ) {
 
     }
 
 
 
+FinalMessagePage::~FinalMessagePage() {
+    setSubMessage( NULL );
+    }
+
+
+
+
 void FinalMessagePage::setMessageKey( const char *inKey ) {
     mKey = inKey;
+    }
+
+
+
+void FinalMessagePage::setSubMessage( const char *inSubMessage ) {
+    if( mSubMessage != NULL ) {
+        delete [] mSubMessage;
+        mSubMessage = NULL;
+        }
+    if( inSubMessage != NULL ) {
+        mSubMessage = stringDuplicate( inSubMessage );
+        }
     }
 
 
@@ -41,7 +60,14 @@ void FinalMessagePage::draw( doublePair inViewCenter,
     doublePair labelPos = { 0, 1 };
 
     
-    drawMessage( translate( mKey ), labelPos, false ); 
+    drawMessage( translate( mKey ), labelPos, false );
+
+    if( mSubMessage != NULL ) {    
+        labelPos.y -= 4;
+        
+        drawMessage( mSubMessage, labelPos, false );
+        }
+    
     }
 
 
