@@ -9,9 +9,14 @@ class FinalMessagePage : public GamePage {
 
         FinalMessagePage();
         
+        ~FinalMessagePage();
 
+        // must be a string literal
         void setMessageKey( const char *inKey );
-        
+
+        // copied internally
+        // set to NULL to clear
+        void setSubMessage( const char *inSubMessage );
 
         virtual void makeActive( char inFresh );
 
@@ -20,6 +25,8 @@ class FinalMessagePage : public GamePage {
 
     protected:
         const char *mKey;
+
+        char *mSubMessage;
         
     };
 
