@@ -4,7 +4,8 @@
 
 
 PageComponent::PageComponent( double inX, double inY )
-        : mX( inX ), mY( inY ), mParent( NULL ), mVisible( true ) {
+        : mX( inX ), mY( inY ), mParent( NULL ), mVisible( true ),
+          mIgnoreEvents( false ) {
     
     }
         
@@ -99,7 +100,17 @@ void PageComponent::base_clearState(){
 
 
 
+void PageComponent::setIgnoreEvents( char inIgnoreEvents ) {
+    mIgnoreEvents = inIgnoreEvents;
+    }
+
+
+
 void PageComponent::base_pointerMove( float inX, float inY ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     inX -= mX;
     inY -= mY;
     
@@ -117,6 +128,10 @@ void PageComponent::base_pointerMove( float inX, float inY ){
 
 
 void PageComponent::base_pointerDown( float inX, float inY ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     inX -= mX;
     inY -= mY;
     
@@ -134,6 +149,10 @@ void PageComponent::base_pointerDown( float inX, float inY ){
 
 
 void PageComponent::base_pointerDrag( float inX, float inY ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     inX -= mX;
     inY -= mY;
     
@@ -151,6 +170,10 @@ void PageComponent::base_pointerDrag( float inX, float inY ){
 
 
 void PageComponent::base_pointerUp( float inX, float inY ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     inX -= mX;
     inY -= mY;
     
@@ -168,6 +191,10 @@ void PageComponent::base_pointerUp( float inX, float inY ){
 
 
 void PageComponent::base_keyDown( unsigned char inASCII ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     for( int i=0; i<mComponents.size(); i++ ) {
         PageComponent *c = *( mComponents.getElement( i ) );
     
@@ -182,6 +209,10 @@ void PageComponent::base_keyDown( unsigned char inASCII ){
 
         
 void PageComponent::base_keyUp( unsigned char inASCII ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     for( int i=0; i<mComponents.size(); i++ ) {
         PageComponent *c = *( mComponents.getElement( i ) );
     
@@ -196,6 +227,10 @@ void PageComponent::base_keyUp( unsigned char inASCII ){
 
 
 void PageComponent::base_specialKeyDown( int inKeyCode ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     for( int i=0; i<mComponents.size(); i++ ) {
         PageComponent *c = *( mComponents.getElement( i ) );
     
@@ -210,6 +245,10 @@ void PageComponent::base_specialKeyDown( int inKeyCode ){
 
 
 void PageComponent::base_specialKeyUp( int inKeyCode ){
+    if( mIgnoreEvents ) {
+        return;
+        }
+    
     for( int i=0; i<mComponents.size(); i++ ) {
         PageComponent *c = *( mComponents.getElement( i ) );
     
